--- a/src/app/profiles/profiles.component.html
+++ b/src/app/profiles/profiles.component.html
@@ -1,1 +1,67 @@
-<p>profiles works!</p>
+<h1>GITHUB-SEARCH</h1>
+<p class="github">"A search engine for github-accounts."</p>
+<div class="container">
+    <form action="" class="enter">
+        <div class="form-group ">
+            <input type="text" placeholder="Github's username" class="form-control " [(ngModel)]="username"
+                name="username" (keyup)="findProfile()">
+        </div>
+    </form>
+
+    <div *ngIf="profile">
+        <div class="row">
+            <div class="col-sm-2">
+                <img class="img" src="{{profile.avatar_url}}" class="img-fluid" alt="profile">
+            </div>
+            <br>
+            <div class="col-sm-6">
+                <ul class="list-group">
+                    <li class="list-group-item" *ngIf="profile.bio">{{profile.bio}}</li>
+                    <br>
+                    <li class="list-group-item" *ngIf="profile.blog">{{profile.blog}}</li>
+                    <br>
+                    <li class="list-group-item" *ngIf="profile.email">{{profile.email}}</li>
+                </ul>
+            </div>
+        </div>
+        <div class='row'>
+            <div class="col-sm-6">
+                <div>
+                    <hr>
+                    <p>
+                        <span class="label" class="btn btn-success"> {{profile.followers}} Followers</span>&nbsp;
+                        <span class="label" class="btn btn-info"> {{profile.following}} Following </span>&nbsp;
+                    </p>
+                       <p><span class="label" class="btn btn-primary"> {{profile.public_repos}} Repositories</span></p>
+                    <hr>
+                    <hr>
+                </div>
+
+                <p>
+                    <a href="{{profile.html_url}}" target="_blank" class="m-3 btn btn-outline-warning">Check profile on github</a>
+                </p>
+                <hr>
+                <h2>My Repositories:</h2>
+                <div class="row">
+                    <div class="">
+                        <div *ngFor="let repos of repos">
+                            <div class="card m-4 " appHighlight>
+                                <div class=" text-center card-header">
+                                    <h2>{{repos.name}}</h2>
+                                </div>
+                                <br>
+                                <br>
+                                <div class="card-body ">
+                                    <p class="dp">{{repos.description}}</p>
+                                    <p>Created on: {{repos.created_at | date}}</p>
+                                </div>
+                                <a href="{{repos.html_url}}" class="text-align-center" target="_blank"
+                                    class="m-3 btn btn-outline-info card-footer">View this project on github</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
