modified profiles component

--- a/src/app/profiles/profiles.component.html
+++ b/src/app/profiles/profiles.component.html
@@ -1,5 +1,5 @@
 <h1>GITHUB-SEARCH</h1>
-<p class="github">"A search engine for github-accounts."</p>
+<p class="github">"A search engine for github-accounts/repositories."</p>
 <div class="container">
     <form action="" class="enter">
         <div class="form-group ">
@@ -10,7 +10,7 @@
 
     <div *ngIf="profile">
         <div class="row">
-            <div class="col-sm-2">
+            <div class="col-sm-3">
                 <img class="img" src="{{profile.avatar_url}}" class="img-fluid" alt="profile">
             </div>
             <br>
