--- a/src/app/profiles/profiles.component.css
+++ b/src/app/profiles/profiles.component.css
@@ -1,10 +1,12 @@
 h1 {
+    padding-top: 2%;
     text-align: center;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
 }
 .github  {
     text-align: center;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color:black;
 }
 .dp {
