--- a/src/app/profiles/profiles.component.html
+++ b/src/app/profiles/profiles.component.html
@@ -3,18 +3,18 @@
 <div class="container">
     <form action="" class="enter">
         <div class="form-group ">
-            <input type="text" placeholder="Github's username" class="form-control " [(ngModel)]="username"
+            <input type="text" placeholder="Github Username" class="form-control " [(ngModel)]="username"
                 name="username" (keyup)="findProfile()">
         </div>
     </form>
-
+    
     <div *ngIf="profile">
         <div class="row">
             <div class="col-sm-3">
                 <img class="img" src="{{profile.avatar_url}}" class="img-fluid" alt="profile">
             </div>
             <br>
-            <div class="col-sm-6">
+            <div class="col-sm-5">
                 <ul class="list-group">
                     <li class="list-group-item" *ngIf="profile.bio">{{profile.bio}}</li>
                     <br>
@@ -36,31 +36,26 @@
                     <hr>
                     <hr>
                 </div>
-
                 <p>
-                    <a href="{{profile.html_url}}" target="_blank" class="m-3 btn btn-outline-warning">Check profile on github</a>
+                <a href="{{profile.html_url}}" target="_blank" class="m-6 btn btn-outline-warning">Check profile on github</a>
                 </p>
                 <hr>
                 <h2>My Repositories:</h2>
-                <div class="row">
-                    <div class="">
+                <br>
                         <div *ngFor="let repos of repos">
-                            <div class="card m-4 " appHighlight>
+                            <div class="card m-2" appHighlight>
                                 <div class=" text-center card-header">
                                     <h2>{{repos.name}}</h2>
                                 </div>
                                 <br>
                                 <br>
-                                <div class="card-body ">
+                                <div class="card-body">
                                     <p class="dp">{{repos.description}}</p>
                                     <p>Created on: {{repos.created_at | date}}</p>
                                 </div>
-                                <a href="{{repos.html_url}}" class="text-align-center" target="_blank"
-                                    class="m-3 btn btn-outline-info card-footer">View this project on github</a>
+                                <a href="{{repos.html_url}}" class="text-align-center" target="_blank"class="m-3 btn btn-outline-info card-footer">Check repository on github</a>
                             </div>
-                        </div>
-                    </div>
-                </div>
+                        </div> 
             </div>
         </div>
     </div>
